# process-mining-demo

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Event-detection-notes.md  SHIP-safety-case-notes.md  discovering-social-networks-notes.md  fault-diagnosis-digraph-notes.md  future-work.md  project-proposal-slim.md  project-proposal-slim.tex  project-proposal.md  wavelet-analysis-notes.md
docs/lightning_presentation/: process_mining_lightning_talk.tex
docs/literature_review/: literature-review.tex
docs/project_proposal/: project-proposal-slim.tex
docs/project_status_update/: project-status-update.bbl  project-status-update.blg  project-status-update.tex  references.bib
examples/: example_1.ipynb  example_1.py  example_2.ipynb  example_2.json
examples/example_3/: example_3.ipynb  synthetic_data.csv  synthetic_data_prompt.md
examples/example_4/: aim_format.md  case_generator.py  event_extractor.py  example_4_part_1.ipynb  example_4_part_2.ipynb  variant_visualization.py
examples/example_5/: CLAUDE.md  __init__.py  event_classifier.py  example_5.ipynb  overview.md  ship_config.py  ship_dispatcher.py  wavelet_denoiser.py
