[project]
name = "process-mining-demo"
version = "0.1.0"
description = "A simple demo of NLP and process mining"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.1.2",
    "pm4py>=2.7.19.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
